--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
   },
   "homepage": "https://github.com/WIZARDOF-OZ/AIO-Discord-Bot#readme",
   "dependencies": {
+    "akaneko": "^5.2.8",
+    "canvacord": "^5.4.10",
     "discord.js": "^14.13.0",
     "distube": "^4.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "quick.db": "^9.1.7",
+    "superagent": "^8.1.2"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
